# ai-infra

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  Dockerfile.prod  Dockerfile.productTest  Dockerfile.vllm  README.md  alembic.ini  api-service-prod.yaml  api-service-staging.yaml  async_ingest_sequence.md  bench_chat.inc.sh  demo_curls.txt  docker-compose.yml  gen_dat.py  ideas.txt  ingest_sequence.md  proposal.txt  pyproject.toml  sequence.md  teset_query.py  testNew  testOld.sh  testing.txt  tmp  troubleshooting.md
.github/workflows/: cloudrun-deploy.yml  create-deploy-artifact.yml  deploy-postgres.yml  deploy-vllm.yml  run-alembic.yml  test.yml
alembic/: env.py
alembic/versions/: 62df52214b09_api_usage.py  78098b94ff86_initial_schema.py  a1b2c3d4e5f6_upload_sessions.py  b7c8d9e0f1a2_ingestion_job_total_chunks.py
app/: auth.py  config.py  db.py  main.py  models.py  warmup.py
app/TextChunking/: .gitignore  diabetes_clean.txt  text_chunking copy.py  text_chunking_embedding .py
app/routers/: chat.py  ingest.py  ingest_worker.py  metrics.py  query.py  teams.py
app/schemas/: chat.py  document.py  ingest_worker.py  query.py
app/services/: chat.py  cloud_tasks.py  document.py  gcs.py  ingest_pipeline.py  insert.py  query.py  rag.py  redis_service.py  usage.py
bench/: README.md  __init__.py  cold_start_chat_latency.py  mrr_retrieval.py  query_retrieval_latency.py  upload_latency.py
docs/: setupGuide.md  troubleshooting.md  vmError.md
pgvector/: Dockerfile  README.md  env.sh  example_insert.py  postgres.conf
pgvector/init/: 002_enums.sql  003_core_tables.sql  004_vector_tables.sql  005_indexes.sql  006_seed.sql
scripts/: query_retrieval_latency.sh  warm_start_chat_latency.sh
test/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
test/app/: __init__.py  main.py  rag.py
tests/: conftest.py  test_auth.py  test_bench_cold_start_chat_latency.py  test_bench_mrr_retrieval.py  test_bench_query_retrieval_latency.py  test_bench_upload_latency.py  test_chat.py  test_cloud_tasks.py  test_ingest.py  test_ingest_pipeline.py  test_ingest_router_edges.py  test_ingest_worker.py  test_main.py  test_query.py  test_services_chat.py  test_services_document.py  test_services_insert.py  test_services_query.py  test_services_rag.py  test_teams.py  test_warmup.py
