[project]
name = "ai-infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "pydantic>=2.0",
    "langchain-core>=0.2.0",
    "langchain-huggingface>=0.0.1",
    "langchain-text-splitters>=0.2.0",
    "google-cloud-storage>=3.9.0",
    "google-cloud-tasks>=2.16.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.22",
    "pypdf>=3.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.15",
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "redis>=7.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.coverage.run]
source = ["app"]
branch = false

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
